# letta-doubao

./: .dockerignore  .env.example  .env2.example  .env3.example  .gitignore  MANUAL.md  README.md  compose.offline-sim.yaml  compose.yaml  init.sql  pyproject.toml  zz-cmds.txt
.github/: copilot-instructions.md
ade_core/: __init__.py  model_allowlist.py  settings_file_loader.py
agent_platform_api/: __init__.py  app.py  dependencies.py  helpers.py  main.py  mappers.py  model_options.py  openapi_metadata.py  runtime.py  settings.py
bruno/: Spark simple test thinking.yml  Spark simple test.yml  hello.yml  label01.yml  ollama simple test.yml  opencollection.yml  unsloth hello.yml
config/: model_router_model_profiles.json  model_router_sources.json
dev_ui/: Dockerfile  main.py
docker/: agent_platform_api.Dockerfile  dev_ui.Dockerfile  model_router.Dockerfile
docs/: 01_letta_agents_and_memory.py  02_letta_system_instructions_and_tools.py  03_letta_inner_workings_and_tool_calls.py  04_letta_full_prompt_synthesis.py  ade-frontend-scope.mdx  agent_platform_milestone_status.md  codebase-map.md  commenting-feature-tracker.md  development-conventions.md  index.mdx  milestone-tracker.mdx
frontend-ade/: package-lock.json  package.json
model_router/: __init__.py  app.py  catalog.py  profiles.py  settings.py
notebooks/: 01-doubao-api-smoke.ipynb  01_doubao_api_smoke.py  02_letta_e2e.py  zz01-create-one-agent.ipynb  zz02-read-agent-info.ipynb  zz03-add-tools.ipynb  zz04-talk-with-agent.ipynb  zz05-all-in-one copy.ipynb  zz05-all-in-one.ipynb  zz2.ipynb  zz3.ipynb  (+1 more)
(+204 files in other folders)
