[project]
name = "letta-LMStudio"
version = "0.1.0"
description = "Letta with LMStudio as a backend LLM provider."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "letta-client>=1.8.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.2",
    "uvicorn>=0.42.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "marimo[recommended]>=0.21.1",
]

